# jellopool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WIRING.md  flake.nix
assets/: word_bank.ron
src/: board.rs  data.rs  magnet_poetry.textproto  main.rs  prelude.rs  states.rs  word_bank.rs
src/tiles/: drag.rs  layout.rs  mod.rs
