[package]
name = "poetry_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
random_word = { version = "0.5.2", features = ["en"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
