[package]
name = "poetry_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
hashbrown = "0.17.1"
rand = "0.10.1"
random_word = { version = "0.5.2", features = ["en"] }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
